# C_VisionHomework

./: README.md
MagicCube/: CMakeCache.txt  CMakeLists.txt  MagicCube.cpp  MagicCube.hpp  Makefile  cmake_install.cmake  cube.cpp
QR_code/: CMakeCache.txt  CMakeLists.txt  Makefile  QR.cpp  QuickResponse.cpp  QuickResponse.hpp  cmake_install.cmake  main.out  参考文献.txt
